# OpenSiege

./: CMakeLists.txt  README.md  conanfile.py  default.nix
.github/workflows/: ubuntu.yml
bits/ui/interfaces/backend/data_bar/: data_bar.gas
bits/world/maps/opensiege/: main.gas
bits/world/maps/opensiege/index/: stitch_index.gas
bits/world/maps/opensiege/info/: hotpoints.gas  start_positions.gas
bits/world/maps/opensiege/regions/r1/: main.gas
bits/world/maps/opensiege/regions/r1/decals/: decals.gas
bits/world/maps/opensiege/regions/r1/editor/: hotpoints.gas  light_locks.gas  logical_flags.gas  stitch_helper.gas
bits/world/maps/opensiege/regions/r1/index/: node_mesh_index.gas  streamer_node_content_index.gas  streamer_node_index.gas
bits/world/maps/opensiege/regions/r1/lights/: lights.gas
bits/world/maps/opensiege/regions/r1/terrain_nodes/: nodes.gas  siege_nodes.lnc
cmake/: FindRE2C.cmake  GenerateDSModShortcut.ps1
docs/: help-loa.txt  help.txt
docs/ds1/: fex-1.1.txt
docs/ds2/: 32 Bit Systems.reg  64-Bit Systems.reg  help.log.txt  path.log.txt
docs/ikkyo/: dsdll.h  ikkyo.cpp
docs/siege_max/docs/: LanceImporters.txt
docs/siege_max/plugins/: GripMarker.ms  asp_mod.ms
docs/siege_max/scripts/: ASPImport.ms  PRSImport.ms  SNOImport.ms  startup.ms
docs/siege_max/scripts/add-ons/: InstallLanceImporters.ms
docs/siege_max/ui/: SiegeMaxQuadMenus.mnu
docs/tutorials/sfx/: README.md
docs/tutorials/sfx/getting_started/: Siege FX Tutorial #1 - Getting Started.htm
docs/tutorials/sfx/getting_started/Siege FX Tutorial #1 - Getting Started_files/: filelist.xml
docs/tutorials/sfx/targets/: Siege FX Tutorial #3 - Targets.htm
docs/tutorials/sfx/term_reference/: Siege FX Reference - Terminology.htm
docs/tutorials/sfx/the_stack/: Siege FX Tutorial #2 - The Stack.htm
ksy/: sno.ksy
src/: CMakeLists.txt  ContentDb.cpp  ContentDb.hpp  FuelParser.y  Game.cpp  Game.hpp  GodDI.cpp  GodDI.hpp  IFileSys.hpp  LocalFileSys.cpp  LocalFileSys.hpp  Platform.cpp  Platform.cpp.in  Platform.hpp  StringTool.cpp  StringTool.hpp  TankFileSys.cpp  TankFileSys.hpp  World.cpp  World.hpp  main.cpp
src/cfg/: ArgsConfig.cpp  IniConfig.cpp  RegistryConfig.cpp  SteamConfig.cpp  UserConfig.cpp  WritableConfig.cpp  WritableConfig.hpp
src/console/: Console.cpp  Console.hpp  ConsoleSignatureScanner.cpp
src/core/: CMakeLists.txt
src/core/gas/: Fuel.cpp  Fuel.hpp  FuelScanner.hpp  FuelScanner.r2c
src/core/osgPlugins/: BinaryReader.cpp  BinaryReader.hpp  ReaderWriterASP.cpp  ReaderWriterASP.hpp  ReaderWriterFont.cpp  ReaderWriterRAW.hpp  ReaderWriterSNO.cpp  ReaderWriterSNO.hpp
src/core/ui/: ImageFont.cpp  NormalizedRect.cpp  NormalizedRect.hpp  Rect.cpp  TextLine.cpp  TextLine.hpp  WidgetComponent.cpp
src/filesystem/: LocalFileSys.cpp  LocalFileSys.hpp  TankFile.cpp  TankFile.hpp  TankFileReader.cpp  TankFileSys.cpp  TankFileSys.hpp  tank_file.cpp  tank_file.hpp  tank_file_reader.cpp
src/game/: CMakeLists.txt  ContentDb.cpp  ContentDb.hpp  Game.cpp  Game.hpp  IFileSys.hpp  UserConfig.cpp  WritableConfig.hpp
src/game/cfg/: ArgsConfig.cpp  IConfig.hpp
src/game/console/: Console.cpp  Console.hpp  ConsoleSignatureScanner.hpp
src/game/gas/: Fuel.cpp  FuelParser.y
src/game/osg/: Aspect.hpp  SiegeNodeMesh.cpp
src/game/osgPlugins/: ReaderWriterFont.hpp
src/game/state/: GameStateMgr.cpp  IGameState.hpp  InitState.hpp  TestState.cpp  TestState.hpp
src/game/state/test/: RegionTestState.hpp  SiegeNodeTestState.hpp
src/game/ui/: ImageFont.hpp  Widget.cpp
src/gas/: Fuel.cpp  Fuel.hpp  FuelParser.cpp  FuelParser.hpp  FuelParser.y  FuelScanner.cpp
src/osg/: Aspect.cpp  AspectImpl.hpp  FileNameMap.cpp  FileNameMap.hpp  PRS.cpp  PRS.hpp  ReaderWriterRAW.cpp  ReaderWriterSNO.cpp  ReaderWriterSNO.hpp  ReaderWriterSiegeNodeList.cpp  ReaderWriterSiegeNodeList.hpp  SiegeNodeMesh.cpp  SiegeNodeMesh.hpp
src/osgPlugins/: BinaryReader.cpp  BinaryReader.hpp  ReaderWriterASP.cpp  ReaderWriterASP.hpp  ReaderWriterPRS.cpp  ReaderWriterPRS.hpp  ReaderWriterSNO.cpp  ReaderWriterSNO.hpp  ReaderWriterSiegeNodeList.cpp  ReaderWriterUI.cpp  ReaderWriterUI.hpp
src/state/: ExitState.cpp  ExitState.hpp  GameStateMgr.cpp  GameStateMgr.hpp  IGameStateMgr.hpp  IGameStateProvider.hpp  InitState.cpp  InitState.hpp  TestState.hpp
src/state/test/: AspectMeshTestState.cpp  AspectMeshTestState.hpp  FullMapTestState.cpp  FullMapTestState.hpp  GasTestState.cpp  GasTestState.hpp  RegionTestState.cpp  RegionTestState.hpp  SiegeNodeTestState.cpp  SiegeNodeTestState.hpp  TankTestState.cpp  TankTestState.hpp  UITestState.cpp  UITestState.hpp  UnveilingTestState.cpp  UnveilingTestState.hpp
src/ui/: Button.cpp  Button.hpp  DialogBox.cpp  DialogBox.hpp  Font.hpp  ImageFont.cpp  ImageFont.hpp  Justification.cpp  Justification.hpp  NormalizedRect.cpp  NormalizedRect.hpp  Rect.cpp  Rect.hpp  Shell.cpp  Shell.hpp  Text.cpp  Text.hpp  TextLine.cpp  TextLine.hpp  Widget.cpp  Widget.hpp  WidgetComponent.cpp  WidgetComponent.hpp
src/world/: Region.cpp  Region.hpp  SiegePos.cpp  SiegePos.hpp  SiegeRot.cpp  SiegeRot.hpp  World.cpp  World.hpp  WorldMap.cpp  WorldMap.hpp  WorldMapData.cpp  WorldMapData.hpp
